--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/tailwindcss": "^6.10.1",
+    "@tailwindcss/forms": "^0.5.7",
     "daisyui": "^4.4.9",
     "nuxt": "^3.8.2",
     "nuxt-icon": "^0.6.6",
