--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nuxt-icon": "^0.6.6",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "izitoast": "^1.4.0"
   }
 }
